--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Пользователь</title>
 </head>
-<body>
+<body  bgcolor="#afeeee">
+<form action="#" th:action="@{/logout}" method="get">
+    <input  style="border-color: lightskyblue"  type="submit" value="ВЫХОД"/>
+</form>
+<br>
+<form><button>
+<a th:if="${#lists.contains(#authorization.expression('hasAnyRole(''ROLE_USER'',''ROLE_ADMIN'')'), true)}"
+   th:href="${#authorization.expression('hasRole(''ROLE_ADMIN'')') ? '/admin' : '/login'}">ВЕРНУТЬСЯ В ПАНЕЛЬ
+    АДМИНИСТРАТОРА</a></button>
+</form>
+<h1 style="color: #191a1a" ><p style="text-align: center">Панель пользователя</p></h1>
+
+<table align="center" class="table table-hover">
+    <tr border="1" bgcolor="#f0f8ff">
+        <th bgcolor="#ffd700"><h2>Id</h2></th>
+        <th><h2>ИМЯ</h2></th>
+        <th><h2>ФАМИЛИЯ</h2></th>
+        <th><h2>ВОЗРАСТ</h2></th>
+        <th><h2>ЛОГИН</h2></th>
+        <th><h2>УРОВЕНЬ ДОСТУПА</h2></th>
+    </tr>
+    <tr>
+        <h3><th bgcolor="#ffd700" th:text="${user.getId()}"><p style="text-align: center">ID</p></th></h3>
+        <h3><th bgcolor="#f0f8ff"  th:text="${user.getName()}"><p style="text-align: center">Имя</p></th></h3>
+        <h3><th bgcolor="#f0f8ff" th:text="${user.getLastName()}"><p style="text-align: center">Фамилия</p></th></h3>
+        <h3><th bgcolor="#f0f8ff" th:text="${user.getAge()}"><p style="text-align: center">Возраст</p></th></h3>
+        <h3><th bgcolor="#f0f8ff" th:text="${user.getLogin()}"><p style="text-align: center">Логин</p></th></h3>
+        <h3><th bgcolor="#f0f8ff">
+  <span th:each="role : ${user.getRoles()}"><span th:text="${#strings.substringAfter(role.getName(), '_')}"></span>
+  </span></th></h3>
+
+    </tr>
+</table>
+<br>
+
 
 </body>
 </html>
