--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -11,6 +11,7 @@
         <input  style="border-color: lightskyblue"  type="submit" value="ВЫХОД"/>
         </form>
     </li>
+    <br>
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="user">ПАНЕЛЬ ПОЛЬЗОВАТЕЛЯ</a>
     </li>
@@ -25,13 +26,13 @@
         <th><h3>ЛОГИН</h3></th>
         <th><h3>УРОВЕНЬ ДОСТУПА</h3></th>
         <th bgcolor="b0c4de">
-            <form  action="/newUser">
+            <form  action="/admin/newUser">
                 <button><h3>Добавить пользователя</h3></button>
             </form>
         </th>
     </tr>
     <tr th:each="user : ${users}">
-        <th bgcolor="#ffd700"><a th:href="@{/user/{id}(id=${user.getId()})}" th:utext="${user.getId()}"></a></th>
+        <th bgcolor="#ffd700"><a th:href="@{/admin/user/{id}(id=${user.getId()})}" th:utext="${user.getId()}"></a></th>
         <th bgcolor="#f0f8ff" th:utext="${user.getName()}"></th>
         <th bgcolor="#f0f8ff" th:utext="${user.getLastName()}"></th>
         <th bgcolor="#f0f8ff" th:utext="${user.getAge()}"></th>
@@ -41,10 +42,10 @@
   </span>
         </th>
         <td bgcolor="b0c4de">
-            <form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">
+            <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
                 <input type="submit" value="УДАЛИТЬ">
             </form>
-            <a th:href="@{/{id}/edit(id=${user.getId()})}">
+            <a th:href="@{/admin/{id}/edit(id=${user.getId()})}">
                 <button>РЕДАКТИРОВАТЬ</button></a>
         </td>
         <td>
