--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,18 +6,19 @@
     <title>Редактировать список пользователей</title>
 </head>
 <form action="#" th:action="@{/logout}" method="get">
-    <input  style="border-color: lightskyblue"  type="submit" value="ВЫХОД"/>
+    <input style="border-color: #aeedec" type="submit" value="ВЫХОД"/>
 </form>
+<br>
 <form><button>
     <a th:if="${#lists.contains(#authorization.expression('hasAnyRole(''ROLE_USER'',''ROLE_ADMIN'')'), true)}"
        th:href="${#authorization.expression('hasRole(''ROLE_ADMIN'')') ? '/admin' : '/login'}">ВЕРНУТЬСЯ В ПАНЕЛЬ
         АДМИНИСТРАТОРА</a></button>
 </form>
 <body bgcolor="#afeeee">
-<table class ="italic">
+<table align="center" class="table table-hover" >
     <h1><p style="text-align: center">Изменение данных</p></h1>
     <tr>
-        <form th:method="patch" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}" id="edit-form">
+        <form th:method="patch" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}" id="edit-form">
             <td bgcolor="#ffd700">
                 <label for="id"><h3>ID</h3></label>
                 <input readonly type="number" th:field="*{id}" id="id" placeholder="id">
@@ -55,7 +56,8 @@
                     </label>
                 </div>
             </td>
-            <input type="submit" value="ОБНОВИТЬ ПОЛЬЗОВАТЕЛЯ"/>
+            <br>
+           <div><input style="border-color: #aeedec" type="submit" value="ОБНОВИТЬ ПОЛЬЗОВАТЕЛЯ"/></div>
         </form>
     </tr>
     <br/>
