--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -25,6 +25,8 @@
     <br>
     <label for="age"><h3>Введите возраст</h3></label>
     <input type="text" th:field="*{age}" id="age"/>
+    <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}"
+       style="color: #ec1f1f;"><label for="age">Введите возраст</label></p>
     <br>
     <br>
     <label for="login"><h3>Введите логин</h3></label>
