--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Панель администратора</title>
 </head>
-<body bgcolor="#afeeee">
+<body >
 <ul class="nav nav-pills">
-    <li><form action="#" th:action="@{/logout}" method="get">
-        <input  style="border-color: lightskyblue"  type="submit" value="ВЫХОД"/>
+    <li>
+        <form action="#" th:action="@{/logout}" method="get">
+            <input style="border-color: lightskyblue" type="submit" value="ВЫХОД"/>
         </form>
     </li>
-    <br>
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="user">ПАНЕЛЬ ПОЛЬЗОВАТЕЛЯ</a>
+        <a class="nav-link active" aria-current="page" href="/user"> ПАНЕЛЬ ПОЛЬЗОВАТЕЛЯ</a>
     </li>
 </ul>
- <table  align="center" class="table table-hover" >
-    <h1 style="color: #191a1a" ><p style="text-align: center">Панель администратора</p> </h1>
-    <tr border="2"  bgcolor="#f0f8ff" >
-        <th  bgcolor="#ffd700"><h2>Id</h2></th>
+<h2 style="text-align: center">Панель администратора</h2>
+<table style="align-content: center" class="table table-hover">
+
+    <tr >
+        <th ><h2>Id</h2></th>
         <th><h3>ИМЯ</h3></th>
         <th><h3>ФАМИЛИЯ</h3></th>
         <th><h3>ВОЗРАСТ</h3></th>
         <th><h3>ЛОГИН</h3></th>
         <th><h3>УРОВЕНЬ ДОСТУПА</h3></th>
-        <th bgcolor="b0c4de">
-            <form  action="/admin/newUser">
-                <button><h3>Добавить пользователя</h3></button>
+        <th >
+            <form action="/admin/newUser">
+                <button>Добавить пользователя</button>
             </form>
         </th>
     </tr>
     <tr th:each="user : ${users}">
-        <th bgcolor="#ffd700"><a th:href="@{/admin/user/{id}(id=${user.getId()})}" th:utext="${user.getId()}"></a></th>
-        <th bgcolor="#f0f8ff" th:utext="${user.getName()}"></th>
-        <th bgcolor="#f0f8ff" th:utext="${user.getLastName()}"></th>
-        <th bgcolor="#f0f8ff" th:utext="${user.getAge()}"></th>
-        <th bgcolor="#f0f8ff" th:utext="${user.getLogin()}"></th>
-        <th bgcolor="#f0f8ff">
+        <th ><a th:href="@{/admin/user/{id}(id=${user.getId()})}" th:utext="${user.getId()}"></a></th>
+        <th  th:utext="${user.getName()}"></th>
+        <th  th:utext="${user.getLastName()}"></th>
+        <th  th:utext="${user.getAge()}"></th>
+        <th  th:utext="${user.getLogin()}"></th>
+        <th >
   <span th:each="role : ${user.getRoles()}"><span th:text="${#strings.substringAfter(role.getName(), '_')}"></span>
   </span>
         </th>
-        <td bgcolor="b0c4de">
+        <td >
             <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
                 <input type="submit" value="УДАЛИТЬ">
             </form>
             <a th:href="@{/admin/{id}/edit(id=${user.getId()})}">
-                <button>РЕДАКТИРОВАТЬ</button></a>
+                <button>РЕДАКТИРОВАТЬ</button>
+            </a>
         </td>
         <td>
-
         </td>
-    </tr></h3>
+
 </table>
 </body>
 </html>
