--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -14,36 +14,43 @@
        th:href="${#authorization.expression('hasRole(''ROLE_ADMIN'')') ? '/admin' : '/login'}">ВЕРНУТЬСЯ В ПАНЕЛЬ
         АДМИНИСТРАТОРА</a></button>
 </form>
-<body bgcolor="#afeeee">
-<table align="center" class="table table-hover" >
-    <h1><p style="text-align: center">Изменение данных</p></h1>
-    <tr>
+<body >
+<div>
+<h2>Внесите изменения</h2>
+</div>
+   <div>
+
         <form th:method="patch" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}" id="edit-form">
-            <td bgcolor="#ffd700">
-                <label for="id"><h3>ID</h3></label>
+
+                <label for="id">ID</label>
                 <input readonly type="number" th:field="*{id}" id="id" placeholder="id">
-            </td>
-            <td bgcolor="#f0f8ff">
-                <label for="name"><h3>Имя</h3></label><input type="text" th:field="*{name}" id="name"/>
-                <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
-            </td>
-            <td bgcolor="#f0f8ff">
-                <label for="last_name"><h3>Фамилия</h3></label><input type="text" th:field="*{lastName}" id="last_Name">
-                <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div>
-            </td>
-            <td bgcolor="#f0f8ff">
-                <label for="last_name"><h3>Возраст</h3></label><input type="text" th:field="*{age}" id="age">
-                <div th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div>
-            </td>
-            <td bgcolor="#f0f8ff">
-                <label for="last_name"><h3>Логин</h3></label><input type="text" th:field="*{login}" id="login">
-                <div th:if="${#fields.hasErrors('login')}" th:errors="*{login}">login error</div>
-            </td>
-            <td bgcolor="#f0f8ff">
-                <label for="last_name"><h3>Пароль</h3></label><input type="text" th:field="*{password}" id="password">
-                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password error</div>
-            </td>
-            <td bgcolor="#f0f8ff">
+                <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div><br>
+
+                <label for="name">Имя</label>
+                <input type="text" th:field="*{name}" id="name"/>
+                <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div><br>
+
+
+                <label for="last_name">Фамилия</label>
+                <input type="text" th:field="*{lastName}" id="last_name">
+                <div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName error</div><br>
+
+
+                <label for="age">Возраст</label>
+                <input type="text" th:field="*{age}" id="age">
+                <div th:if="${#fields.hasErrors('age')}" th:errors="*{age}">age error</div><br>
+
+
+                <label for="login">Логин</label>
+                <input type="text" th:field="*{login}" id="login">
+                <div th:if="${#fields.hasErrors('login')}" th:errors="*{login}">login error</div><br>
+
+
+                <label for="password">Пароль</label>
+                <input type="text" th:field="*{password}" id="password">
+                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password error</div><br>
+
+
                 <div>
                     <h3><label>Уровень доступа:</label></h3>
                     <div>
@@ -57,10 +64,10 @@
                         </label>
                     </div>
                 </div>
-            </td>
+
             <br>
-           <div><input style="border-color: #aeedec" type="submit" value="ОБНОВИТЬ ПОЛЬЗОВАТЕЛЯ"/></div>
+            <input  type="submit" value="ОБНОВИТЬ ПОЛЬЗОВАТЕЛЯ"/>
         </form>
-    </tr>
-    <br/>
-</table>
+   </div>
+</body>
+</html>
