--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:text-align="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
 <body style="background-color: #aeedec">
 <div class="container">
     <form class="form-signin" method="post" action="/login">
-        <h2 style="color: #191a1a"  class="form-signin-heading"><p class="text-center">Please sign in</p></h2>
+        <h2 STYLE="text-align: center" >Please sign in</h2>
         <p>
             <label for="login" class="sr-only">Username</label>
             <input style="background-color: aliceblue" type="text" id="login" name="login" class="form-control" placeholder="Login" required autofocus>
