--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -13,29 +13,34 @@
        th:href="${#authorization.expression('hasRole(''ROLE_ADMIN'')') ? '/admin' : '/login'}">ВЕРНУТЬСЯ В ПАНЕЛЬ
         АДМИНИСТРАТОРА</a></button>
 </form>
-<body  bgcolor="#afeeee">
-<h1 align="center" >Ввод данных</h1>
-<form  align="center" class="table table-hover"  th:method="POST" th:action="@{/admin/new}" th:object="${user}">
-    <h3> <label bgcolor="#f0e68c" for="name">Введите имя</label></h3>
+<body >
+<h1 style="text-align: center">Ввод данных</h1>
+<div>
+<form  class="table table-hover"  th:method="POST" th:action="@{/admin/new}" th:object="${user}">
+
+    <label  for="name">Введите имя</label>
     <input type="text" th:field="*{name}" id="name"/>
-    <br>
-    <label for="lastName"><h3>Введите фамилию</h3></label>
+     <div></div><br>
+
+    <label for="lastName">Введите фамилию</label>
     <input type="text" th:field="*{lastName}" id="lastName"/>
-    <br>
-    <br>
-    <label for="age"><h3>Введите возраст</h3></label>
+     <div></div><br>
+
+    <label for="age">Введите возраст</label>
     <input type="text" th:field="*{age}" id="age"/>
     <p th:if="${#fields.hasErrors('age')}" th:errors="*{age}"
-       style="color: #ec1f1f;"><label for="age">Введите возраст</label></p>
-    <br>
-    <br>
-    <label for="login"><h3>Введите логин</h3></label>
+       style="color: #ec1f1f;"><label for="age"></label>
+    </p>
+    <div></div><br>
+
+    <label for="login">Введите логин</label>
     <input type="text" th:field="*{login}" id="login"/>
-    <br>
-    <br>
-    <label for="password"><h3>Введите пароль</h3></label>
+    <div></div><br>
+
+    <label for="password">Введите пароль</label>
     <input type="text" th:field="*{password}" id="password"/>
-    <td bgcolor="#f0f8ff">
+    <div></div><br>
+
         <div>
             <h3><label>Уровень доступа:</label></h3>
             <label>
@@ -47,13 +52,11 @@
                 ADMIN
             </label>
         </div>
-    </td>
     <br>
     <br>
     </br/>
-    <tr >
-        <th> <form><input type="submit" value="СОЗДАТЬ"/></form></th>
-    </tr>
+    <form><input type="submit" value="СОЗДАТЬ"/></form>
 </form>
+</div>
 </body>
 </html>
