--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
-    <title>Пользователь</title>
+    <title >Пользователь</title>
+    <style>
+        table {
+            border: 1px solid #ccc;
+            border-collapse: collapse;
+            margin: 20px auto;
+            max-width: 800px;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid #ccc;
+        }
+        th {
+            background-color: #f6f2f2;
+        }
+
+    </style>
 </head>
 <body>
 
@@ -21,7 +36,7 @@
     </button>
 </form>
 
-<h1>Панель пользователя</h1>
+<h1 style="text-align: center">Панель пользователя</h1>
 
 <table >
     <tr >
